[package]
name = "tuipool"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI dependencies
tui = "0.19"           # Terminal UI crate
crossterm = "0.22"     # Crossterm for handling input and terminal events

